--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2312,7 +2312,8 @@
   "Free --[legend, unused disk space]--": "Free",
   "Top content in %language%": "Top content in %language%",
   "Apply": "Apply",
-  "24-hour clock": "24-hour clock",
   "Disable background": "Disable background",
+  "Installing, please wait...": "Installing, please wait...",
+  "There was an error during installation. Please, try again.": "There was an error during installation. Please, try again.",
   "--end--": "--end--"
 }
