Fix usages of I18nMessage + missed sign-in verification strings

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -554,7 +554,7 @@
   "Latest Transactions": "Latest Transactions",
   "Looks like you don't have any transactions.": "Looks like you don't have any transactions.",
   "If Sync is on, LBRY will backup your wallet and preferences. If disabled, you are responsible for keeping a backup.": "If Sync is on, LBRY will backup your wallet and preferences. If disabled, you are responsible for keeping a backup.",
-  "Your update is now pending on LBRY. It will take a few minutes to appear for other users.": "Your update is now pending on LBRY. It will take a few minutes to appear for other users.",
+  "Your update is now pending. It will take a few minutes to appear for other users.": "Your update is now pending. It will take a few minutes to appear for other users.",
   "Your livestream is now pending. You will be able to start shortly at the streaming dashboard.": "Your livestream is now pending. You will be able to start shortly at the streaming dashboard.",
   "Your content will be live shortly.": "Your content will be live shortly.",
   "Your video will appear on Odysee shortly.": "Your video will appear on Odysee shortly.",
@@ -1303,6 +1303,13 @@
   "Closing preferences": "Closing preferences",
   "You are now signed in.": "You are now signed in.",
   "Welcome back! You are automatically being signed in.": "Welcome back! You are automatically being signed in.",
+  "You can now close this tab.": "You can now close this tab.",
+  "Authentication failure.": "Authentication failure.",
+  "Invalid or expired sign-in link.": "Invalid or expired sign-in link.",
+  "Invalid captcha response or other authentication error.": "Invalid captcha response or other authentication error.",
+  "Not seeing a captcha? Check your ad blocker or try %refresh%.": "Not seeing a captcha? Check your ad blocker or try %refresh%.",
+  "refreshing": "refreshing",
+  "Log in success!": "Log in success!",
   "Join %SITE_NAME%": "Join %SITE_NAME%",
   "terms": "terms",
   "Enter your phone number": "Enter your phone number",
@@ -1685,6 +1692,7 @@
   "Global": "Global",
   "Global Admin": "Global Admin",
   "Moderator": "Moderator",
+  "Admin": "Admin",
   "Global Unblock Channel": "Global Unblock Channel",
   "Global Block Channel": "Global Block Channel",
   "Blocked on behalf of:": "Blocked on behalf of:",
@@ -2072,6 +2080,7 @@
   "Are you sure you want to remove this comment?": "Are you sure you want to remove this comment?",
   "This comment has a tip associated with it which cannot be reverted.": "This comment has a tip associated with it which cannot be reverted.",
   "Dismiss pinned comment": "Dismiss pinned comment",
+  "Dismiss Pin": "Dismiss Pin",
   "Recent Comments": "Recent Comments",
   "%title% by %channelTitle%": "%title% by %channelTitle%",
   "%title% by %channelTitle% %ariaDate%": "%title% by %channelTitle% %ariaDate%",
