--- a/.env.defaults
+++ b/.env.defaults
@@ -120,7 +120,7 @@ ENABLE_WILD_WEST=true
 BRANDED_SITE=odysee
 LOADING_BAR_COLOR=#e50054
 
-# FIREBASE
+# --- Firebase ---
 FIREBASE_API_KEY=AIzaSyAgc-4QORyglpYZ3qH9E5pDauEDOJXgM3A
 FIREBASE_AUTH_DOMAIN=lbry-mobile.firebaseapp.com
 FIREBASE_PROJECT_ID=lbry-mobile
@@ -130,6 +130,13 @@ FIREBASE_APP_ID=1:638894153788:web:35b295b15297201bd2e339
 FIREBASE_MEASUREMENT_ID=G-2MPJGFEEXC
 FIREBASE_VAPID_KEY=BFayEBpwMTU9GQQpXgitIJkfx-SD8-ltrFb3wLTZWgA27MfBhG4948pe0eERl432NzPrMKsbkXnA7ap_vLPgLYk
 
-# Development
+# --- Geoblock ---
+# Note: our current version of dotenv doesn't support multiline definition.
+#
+#   FORMAT: "<channel_id>; type=[livestream|video|*]; country=[xx|*]; continent=[xx|*]; | ..."
+#
+GEOBLOCKED_CHANNELS="148bfcb49da2c2e781ae27387e45043a4bcbd51e; types=livestream; countries=FR,MS; continents=AF,EU; | 636098f86be74be8b609c38e643e48786d58f413; types=livestream,video; countries=EU,SA; continents=EU;"
+
+# --- Development ---
 REPORT_NEW_STRINGS=false
 USE_LOCAL_HOMEPAGE_DATA=false
