Remove "comment acknowledge" modal + unused strings
Commenting is probably no longer in alpha, but the modal is definitely no longer used.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -176,7 +176,6 @@
   "Yes": "Yes",
   "No": "No",
   "These search results are provided by Odysee.": "These search results are provided by Odysee.",
-  "View file": "View file",
   "Files": "Files",
   "Channels": "Channels",
   "Everything": "Everything",
@@ -225,9 +224,6 @@
   "Did you find something wrong? Think Odysee could add something useful and cool?": "Did you find something wrong? Think Odysee could add something useful and cool?",
   "App": "App",
   "Loading...": "Loading...",
-  "Connected Email": "Connected Email",
-  "Update mailing preferences": "Update mailing preferences",
-  "Reward Eligible": "Reward Eligible",
   "Platform": "Platform",
   "Installation ID": "Installation ID",
   "Access Token": "Access Token",
@@ -343,14 +339,9 @@
   "You have claimed all available rewards! We're regularly adding more so be sure to check back later.": "You have claimed all available rewards! We're regularly adding more so be sure to check back later.",
   "There are no rewards available at this time, please check back later.": "There are no rewards available at this time, please check back later.",
   "Confirm Identity": "Confirm Identity",
-  "Got it": "Got it",
-  "View your channels": "View your channels",
   "Unfollow": "Unfollow",
   "Follow @%channelName%": "Follow @%channelName%",
   "Unfollow @%channelName%": "Unfollow @%channelName%",
-  "Create channel": "Create channel",
-  "Read Odysee Basics FAQ": "Read Odysee Basics FAQ",
-  "View all Odysee FAQs": "View all Odysee FAQs",
   "Find assistance": "Find assistance",
   "Email Us": "Email Us",
   "Today": "Today",
@@ -359,8 +350,9 @@
   "Share on Facebook": "Share on Facebook",
   "Share on Twitter": "Share on Twitter",
   "Share on Telegram": "Share on Telegram",
+  "Share on LinkedIn": "Share on LinkedIn",
   "Share via...": "Share via...",
-  "View on lbry.tv": "View on lbry.tv",
+  "Embed this content": "Embed this content",
   "You currently have the highest bid for this name.": "You currently have the highest bid for this name.",
   "You can generate a new address at any time, and any previous addresses will continue to work.": "You can generate a new address at any time, and any previous addresses will continue to work.",
   "Confirm Removal": "Confirm Removal",
@@ -423,12 +415,8 @@
   "Invalid claim ID %s.": "Invalid claim ID %s.",
   "View Tag": "View Tag",
   "Hide": "Hide",
-  "Sorry, we can't preview this file.": "Sorry, we can't preview this file.",
-  "View File": "View File",
   "Close": "Close",
-  "LBRY Download Complete": "LBRY Download Complete",
   "You have blocked this channel content.": "You have blocked this channel content.",
-  "This channel hasn't published anything yet": "This channel hasn't published anything yet",
   "Network and data settings": "Network and data settings",
   "Floating video player": "Floating video player",
   "Keep content playing in the corner when navigating to a different page.": "Keep content playing in the corner when navigating to a different page.",
@@ -438,7 +426,7 @@
   "24-hour clock": "24-hour clock",
   "Hide wallet balance in header": "Hide wallet balance in header",
   "Show All": "Show All",
-  "LBRY names cannot contain spaces or reserved symbols": "LBRY names cannot contain spaces or reserved symbols",
+  "names cannot contain spaces or reserved symbols": "names cannot contain spaces or reserved symbols",
   "Creating channel...": "Creating channel...",
   "Remember Password": "Remember Password",
   "To --[the tip recipient]--": "To",
@@ -483,8 +471,6 @@
   "%channelName% is not yet ready to be transferred. Please allow up to one week, though it is frequently faster.": "%channelName% is not yet ready to be transferred. Please allow up to one week, though it is frequently faster.",
   "here": "here",
   "%channelName% is not ready to be transferred. You can check the status %statusLink% or check back later.": "%channelName% is not ready to be transferred. You can check the status %statusLink% or check back later.",
-  "Enter Your LBRY Password": "Enter Your LBRY Password",
-  "You set your wallet password when you previously installed LBRY.": "You set your wallet password when you previously installed LBRY.",
   "Remember My Password": "Remember My Password",
   "Extra Verification Needed": "Extra Verification Needed",
   "We weren't able to auto-approve you for rewards. Please complete one of the steps below to unlock them.": "We weren't able to auto-approve you for rewards. Please complete one of the steps below to unlock them.",
@@ -599,16 +585,8 @@
   "Any amount will give you the highest bid, but larger amounts help your content be trusted and discovered.": "Any amount will give you the highest bid, but larger amounts help your content be trusted and discovered.",
   "Loading 3D model.": "Loading 3D model.",
   "Click here": "Click here",
-  "PDF opened externally. %click_here% to open it again.": "PDF opened externally. %click_here% to open it again.",
-  "lbry.tv wallet servers": "lbry.tv wallet servers",
-  "Custom wallet servers": "Custom wallet servers",
-  "Choose a different provider's wallet server.": "Choose a different provider's wallet server.",
-  "Host": "Host",
-  "Port": "Port",
   "Unable to load your saved preferences.": "Unable to load your saved preferences.",
-  "Add/Delete": "Add/Delete",
   "Provide a description and link to your license": "Provide a description and link to your license",
-  "Wallet servers": "Wallet servers",
   "Followers": "Followers",
   "%number% files hidden due to your %content_viewing_preferences_link%": "%number% files hidden due to your %content_viewing_preferences_link%",
   "1 file hidden due to your %content_viewing_preferences_link%": "1 file hidden due to your %content_viewing_preferences_link%",
@@ -616,7 +594,6 @@
   "Use custom wallet servers": "Use custom wallet servers",
   "Remove custom wallet server": "Remove custom wallet server",
   "Add": "Add",
-  "lbry.tv": "lbry.tv",
   "Bid position must be a number.": "Bid position must be a number.",
   "Copy": "Copy",
   "Copy Link": "Copy Link",
@@ -645,14 +622,12 @@
   "Claim %amount% LBC": "Claim %amount% LBC",
   "Claim %range% LBC": "Claim %range% LBC",
   "Claim ??? LBC": "Claim ??? LBC",
-  "Claim ???": "Claim ???",
   "Claim %lbc%": "Claim %lbc%",
   "%amount% fee": "%amount% fee",
   "Thumbnail": "Thumbnail",
   "This Week": "This Week",
   "This Month": "This Month",
   "This Year": "This Year",
-  "This is an experiment, and may be removed in the future. Upload something with the #homepagecagematch tag to battle for the top spot on the home page!": "This is an experiment, and may be removed in the future. Upload something with the #homepagecagematch tag to battle for the top spot on the home page!",
   "Publishing": "Publishing",
   "Update published": "Update published",
   "Livestream Created": "Livestream Created",
@@ -661,12 +636,6 @@
   "Abandon on blockchain (reclaim %lbc%)": "Abandon on blockchain (reclaim %lbc%)",
   "This will increase the overall bid amount for this content, which will boost its ability to be discovered while active.": "This will increase the overall bid amount for this content, which will boost its ability to be discovered while active.",
   "Show this channel your appreciation by sending a donation.": "Show this channel your appreciation by sending a donation.",
-  "LBRY Link": "LBRY Link",
-  "Comment acknowledgement": "Comment acknowledgement",
-  "A few things to know before making your comment:": "A few things to know before making your comment:",
-  "Commenting is in alpha. During the alpha, all comments are sent to a LBRY, Inc. server, not the LBRY network itself.": "Commenting is in alpha. During the alpha, all comments are sent to a LBRY, Inc. server, not the LBRY network itself.",
-  "When the alpha ends, we will attempt to transition comments, but do not promise to do so.": "When the alpha ends, we will attempt to transition comments, but do not promise to do so.",
-  "All comments are viewable by anyone, keep this in mind before writing a comment.": "All comments are viewable by anyone, keep this in mind before writing a comment.",
   "Reply": "Reply",
   "Replying...": "Replying...",
   "refreshing the app": "refreshing the app",
@@ -842,7 +811,6 @@
   "Display HyperChats": "Display HyperChats",
   "Dismiss HyperChats": "Dismiss HyperChats",
   "HyperChats": "HyperChats",
-  "Recent Tips": "Recent Tips",
   "Emojis": "Emojis",
   "Preview Comment Tip": "Preview Comment Tip",
   "This comment has been deleted.": "This comment has been deleted.",
@@ -862,8 +830,6 @@
   "A prudent choice": "A prudent choice",
   "Join": "Join",
   "New History": "New History",
-  "Share on LinkedIn": "Share on LinkedIn",
-  "Embed this content": "Embed this content",
   "More actions": "More actions",
   "Transactions": "Transactions",
   "Payment": "Payment",
@@ -2082,6 +2048,7 @@
   "Dismiss pinned comment": "Dismiss pinned comment",
   "Dismiss Pin": "Dismiss Pin",
   "Recent Comments": "Recent Comments",
+  "Recent Tips": "Recent Tips",
   "%title% by %channelTitle%": "%title% by %channelTitle%",
   "%title% by %channelTitle% %ariaDate%": "%title% by %channelTitle% %ariaDate%",
   "%title% by %channelTitle% %ariaDate%, %mediaDuration%": "%title% by %channelTitle% %ariaDate%, %mediaDuration%",
