Various touchups/fixes of membership functionality (#1066)
* various cleanups

* more touchups

* select currency to use based on location

* fix sidebar

* fixing strings and other touchups

* refactor and do proper string interpolation

* fix stripe error

* text bugfix

* Adjust help

Co-authored-by: Thomas Zarebczan <thomas.zarebczan@gmail.com>

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -628,6 +628,10 @@
   "This Week": "This Week",
   "This Month": "This Month",
   "This Year": "This Year",
+  "Year": "Year",
+  "Yearly": "Yearly",
+  "Month": "Month",
+  "Monthly": "Monthly",
   "Publishing": "Publishing",
   "Update published": "Update published",
   "Livestream Created": "Livestream Created",
