[on hold recsys work] Recommended For You (#782)
* Factor out lighthouse-result processing code for FYP re-use.

The FYP results will be in the same format as LH.

* Recsys: add ability to pass in specific uuid to use

For FYP, we want to pass the UUID as a param when searching for recommendations. The search comes before the recsys entry creation, so we need to generate the UUID first when searching, and then tell recsys to use that specific ID.

* Redux: fetch and store FYP

Note that the gid cannot be used as "hash" for the uri list -- it doesn't necessarily change when the list changes, so we can't use it to optimize redux.  For now, just always update/render when re-fetched.

* UI for FYP

* Mark rendered FYPs

* Pass the FYP ID down the same way as Collection ID

Not ideal, but at least it's in the same pattern as existing code for now. The whole prop-drilling problem with the claim components will be fixed together later.

* Include 'gid' and 'uuid' in recommendation search

* Allow users to mark recommendations that they dislike

* Pass auth-token to all FYP requests + remove beacon use

beacons are unreliable and often blocked

* Only show FYP for members

* FYP readme page

* small fixes

* fyp

Co-authored-by: Thomas Zarebczan <thomas.zarebczan@gmail.com>

--- a/.env.defaults
+++ b/.env.defaults
@@ -16,6 +16,7 @@ SEARCH_SERVER_API_ALT=https://recsys.odysee.tv/search
 SEARCH_SERVER_API=https://lighthouse.odysee.tv/search
 SOCKETY_SERVER_API=wss://sockety.odysee.com/ws
 RECSYS_ENDPOINT=https://recsys.odysee.tv/v1/lvv
+RECSYS_FYP_ENDPOINT=https://recsys.odysee.tv/v1/u
 THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
 THUMBNAIL_CARDS_CDN_URL=https://cards.odycdn.com/
 LOCALE_API=https://api.odysee.com/locale/get
