FYP: allow mobile to reject + change phrasing
- This allows mobile to reject recommendations.
- Also changed from "I dislike this" to "Not interested". Less negative?

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1328,6 +1328,7 @@
   "You don't have any notifications yet, but they will be here when you do!": "You don't have any notifications yet, but they will be here when you do!",
   "I like this": "I like this",
   "I dislike this": "I dislike this",
+  "Not interested": "Not interested",
   "Let %channel% know you enjoyed this!": "Let %channel% know you enjoyed this!",
   "An account with %domain% allows you to earn rewards and backup your data.": "An account with %domain% allows you to earn rewards and backup your data.",
   "Sync my YouTube channel": "Sync my YouTube channel",
