FYP: "Don't recommend channel"

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1324,6 +1324,7 @@
   "I like this": "I like this",
   "I dislike this": "I dislike this",
   "Not interested": "Not interested",
+  "Also, don't recommend channel": "Also, don't recommend channel",
   "Let %channel% know you enjoyed this!": "Let %channel% know you enjoyed this!",
   "An account with %domain% allows you to earn rewards and backup your data.": "An account with %domain% allows you to earn rewards and backup your data.",
   "Sync my YouTube channel": "Sync my YouTube channel",
