FYP: setting to hide section

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2156,6 +2156,9 @@
   "Hide Scheduled Livestreams": "Hide Scheduled Livestreams",
   "You will not see scheduled livestreams by people you follow on the home or following page.": "You will not see scheduled livestreams by people you follow on the home or following page.",
   "Scheduled streams hidden, you can re-enable them in settings.": "Scheduled streams hidden, you can re-enable them in settings.",
+  "Hide Personal Recommendations": "Hide Personal Recommendations",
+  "Recommendations hidden; you can re-enable them in Settings.": "Recommendations hidden; you can re-enable them in Settings.",
+  "You will not see the personal recommendations in the homepage.": "You will not see the personal recommendations in the homepage.",
   "Sorry, the service is currently unavailable.": "Sorry, the service is currently unavailable.",
   "Started %time_date%": "Started %time_date%",
   "Live %time_date%": "Live %time_date%",
