--- a/.env.defaults
+++ b/.env.defaults
@@ -19,7 +19,7 @@ RECSYS_ENDPOINT=https://recsys.odysee.tv/v1/lvv
 RECSYS_FYP_ENDPOINT=https://recsys.odysee.tv/v1/u
 THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
 THUMBNAIL_CARDS_CDN_URL=https://cards.odycdn.com/
-LOCALE_API=https://api.odysee.com/locale/get
+LOCALE_API=https://api.odysee.com/legal/requirements
 THUMBNAIL_HEIGHT=220
 THUMBNAIL_WIDTH=390
 THUMBNAIL_QUALITY=85
